# fast-foto

./: .gitignore  README.md  portra400.md  preprocessing-plan(1).md  pyproject.toml  test.png.json  test2.png.json
fast_foto/: cli.py
fast_foto.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
portra400_emulation/: config.py  core.py  grain.py  hsl.py  tone_curves.py
preprocessing/: analysis.py  color_space.py  config.py  contrast.py  core.py  exposure.py  highlights.py  io.py  noise.py  shadows.py  white_balance.py
tests/: test_portra.py  test_portra_tone_curves.py  test_preprocessing.py
