[project]
name = "fast_foto"
version = "0.1.0"
description = "Preprocessing and Portra 400 emulation pipeline"
authors = [{ name = "fast-foto" }]
requires-python = ">=3.13,<3.14"
dependencies = [
    "numpy>=1.26",
    "Pillow>=10.2.0",
    "rawpy>=0.20.0",
    "scipy>=1.12.0",
    "imageio>=2.34.0",
]

[project.optional-dependencies]
noise = ["opencv-python>=4.9.0.80"]

[project.scripts]
fast-foto = "fast_foto.cli:main"

[tool.setuptools.packages.find]
include = ["fast_foto", "preprocessing", "portra400_emulation"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
